--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -131,17 +131,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
-    "#### Using Mapzen Venues (requires good [WOF](https://mapzen.com/documentation/wof/) coverage):"
+    "#### a) Get random start and end coordinates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -149,29 +146,10 @@
    },
    "outputs": [],
    "source": [
-    "routeList = val.get_routes_by_length(cityName, minRouteLen, maxRouteLen, numRoutes, apiKey=mapzenKey)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "#### Using Google Maps POIs (better for non-Western capitals):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "# Using Mapzen Venues (requires good Who's on First coverage)\n",
+    "routeList = val.get_routes_by_length(cityName, minRouteLen, maxRouteLen, numRoutes, apiKey=mapzenKey)\n",
+    "\n",
+    "## Using Google Maps POIs (better for non-Western capitals):\n",
     "# routeList = val.get_POI_routes_by_length(cityName, minRouteLen, maxRouteLen, numRoutes, gmapsKey)"
    ]
   },
@@ -216,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Simulate GPS"
+    "#### b) Get the route shapes and attributes"
    ]
   },
   {
@@ -464,7 +442,7 @@
     "editable": true
    },
    "source": [
-    "## 3. Iterate Through Routes and Score the Matches"
+    "## 3. Iterate Through Routes, Generate Fake GPS, and Score the Matches"
    ]
   },
   {
@@ -474,7 +452,7 @@
     "editable": true
    },
    "source": [
-    "#### a) Define the Noise Levels and Sample Rates for Synthetic GPS"
+    "#### a) Define the noise levels and sample rates for synthetic GPS"
    ]
   },
   {
@@ -534,7 +512,7 @@
     "editable": true
    },
    "source": [
-    "#### b) Scoring & Validation"
+    "#### b) Defining "
    ]
   },
   {
