--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -512,7 +512,7 @@
     "editable": true
    },
    "source": [
-    "#### b) Defining "
+    "#### b) Defining a validation metric"
    ]
   },
   {
