fix arguments going into `get_coords_per_second`

--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -284,7 +284,7 @@
    "outputs": [],
    "source": [
     "edges, matchedPts, shapeCoords, _ = val.get_trace_attrs(shape)\n",
-    "edges = val.get_coords_per_second(edges)"
+    "edges = val.get_coords_per_second(shapeCoords, edges, '2768')"
    ]
   },
   {
