--- a/notebooks/map_matching_part_II.ipynb
+++ b/notebooks/map_matching_part_II.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -59,6 +59,8 @@
     "import pickle\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
+    "from IPython.display import Image\n",
+    "from IPython.core.display import HTML \n",
     "%matplotlib inline"
    ]
   },
@@ -138,8 +140,8 @@
     "editable": true
    },
    "source": [
-    "<img src=https://raw.githubusercontent.com/valhalla/meili/master/docs/meili/figures/model.png width=70%>\n",
-    "<center><i>The graph structure for an HMM of an example route from Mapzen's [Map Matching primer](https://github.com/valhalla/meili/blob/master/docs/meili/algorithms.md)</i></center>"
+    "![image](https://raw.githubusercontent.com/valhalla/meili/master/docs/meili/figures/model.png)\n",
+    "<center>*The graph structure for an HMM of an example route from Mapzen's [Map Matching primer](https://github.com/valhalla/meili/blob/master/docs/meili/algorithms.md)*</center>"
    ]
   },
   {
@@ -338,7 +340,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Depending on the dimensions of your search space, grid search can be a long and arduous process. In our case, on a 2015 MacBook Pro, it seems to take ~1 min. per route for a given noise level and sample rate. With the configuration specified above, that works out to roughly 30 minutes per route. While this runtime does indeed seem a bit absurd, the beauty of grid search is that if you properly define your search space, you should really only need to do it once. "
    ]
@@ -622,7 +627,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -633,7 +640,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -652,7 +661,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Since we know that almost 90% of our GPS data will be generated from within an area dominated by skyscrapers and other forms of dense urban development, we _**do**_ in this case want to optimize peformance for noisier data. As such we will perform our parameter sweep over routes generated with 60 m of noise:"
    ]
@@ -661,7 +673,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -670,7 +684,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Similarly, since A-OK only collects data every 20 seconds, we can make sure we are only optimizing for data generated at this frequency:"
    ]
@@ -690,7 +707,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We'll search for our optimal $\\beta$ and $\\sigma_z$ values over the same space as before:"
    ]
@@ -699,7 +719,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -719,6 +741,13 @@
    "outputs": [],
    "source": [
     "val.grid_search_hmm_params(cityName + '_3', singaporeRoutes[68:], sampleRates, noiseLevels, betas, sigmas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Retrieve optimal params"
    ]
   },
   {
@@ -771,14 +800,16 @@
     "editable": true
    },
    "source": [
-    "### c) Get scores with optimal params"
+    "### d) Get scores with optimal params"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -801,9 +832,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "### d) Compare to performance with default params"
+    "### e) Compare to performance of default params"
    ]
   },
   {
@@ -811,6 +845,8 @@
    "execution_count": 69,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -822,7 +858,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -873,14 +911,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "### e) Results"
+    "### f) Results"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "By tuning our map-matching parameters to fit the specific character of A-OK Rides' data, we were able to reduce our median error rate from 10% to 6%. Although the difference on the chart might seem small, a 4% gain in median match accuracy can have a huge impact on the overall performance of a near-real-time traffic platform like Open Traffic.\n",
     "\n",
