--- a/notebooks/map_matching_part_II.ipynb
+++ b/notebooks/map_matching_part_II.ipynb
@@ -333,7 +333,8 @@
     "editable": true
    },
    "source": [
-    "```for route in routes:\n",
+    "```python\n",
+    "for route in routes:\n",
     "    for beta in betas:\n",
     "        for sigma in sigmas:\n",
     "            for noise in noiseLevels:\n",
