notebook updates for presentation

--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -17,7 +17,9 @@
     "editable": true
    },
    "source": [
-    "# A \"data-driven\" approach to improving map-matching, Part I"
+    "# A \"data-driven\" approach to improving map-matching - Part I:\n",
+    "## _VALIDATION_\n",
+    "============================================================================================"
    ]
   },
   {
