notebook updates for presentation

--- a/notebooks/GPS Processing.ipynb
+++ b/notebooks/GPS Processing.ipynb
@@ -64,6 +64,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://images.ezvid.com/image/upload/fl_immutable_cache/e_trim/c_pad,f_auto,h_270,q_auto/gckpqy3imzlfjo0veved)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -84,6 +91,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](http://racerender.com/TrackAddict/docs/images/MoreOptions.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -100,6 +114,13 @@
    },
    "source": [
     "### 4. In the app, export your trips by selecting the \"Share\" option, and e-mailing the raw .csv files to yourself"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](http://racerender.com/TrackAddict/docs/images/ExportMenu.jpg)"
    ]
   },
   {
