--- a/notebooks/map_matching_part_III.ipynb
+++ b/notebooks/map_matching_part_III.ipynb
@@ -49,9 +49,9 @@
     "editable": true
    },
    "source": [
-    "As previously discussed [here](link to second blog post), Mapzen's map-matching algorithm relies on a kind of graphical model known as a Hidden Markov Model (HMM). Because HMM's are probabilistic in nature, the matches returned by the algorithm will always only be a best guess. Unforunately, this best guess may still be quite far from the \"truth\" -- AKA **wrong**. \n",
+    "As previously discussed [here](link to second blog post), Mapzen's map-matching algorithm relies on a kind of graphical model known as a Hidden Markov Model (HMM). Because HMM's are probabilistic in nature, the matches returned by the algorithm will always only be a best guess. Unfortunately, this best guess may still be quite far from the \"truth\" -- AKA **wrong**. \n",
     "\n",
-    "To make sure we aren't serving up generating conditions based on junk data, we would like some method for filtering out match results that just aren't realistic before they make their way to the Open Traffic datastore. One such approach we at Mapzen have developed is based on driving **driving speeds**."
+    "To make sure we aren't serving up traffic conditions based on junk data, we would like some method for filtering out match results that just aren't realistic. One such approach we at Mapzen have developed is based on driving **driving speeds**."
    ]
   },
   {
@@ -71,16 +71,8 @@
     "editable": true
    },
    "source": [
-    "Although GPS can often have very poor positional accuracy, its temporal measurements are rarely off by more than a [nanosecond](http://www.atomic-clock.galleon.eu.com/support/gps-time-accuracy.html). Because of this temporal precision, we can assert that any candidate route matched between two GPS data points must traverse its path in exactly the amount of time elapsed between the measurements. What this means is that a truly wacky match -- one that takes detours down side streets or doubles back on itself -- is going to have a lot of additional ground to cover in the same amount of time. In other words, the driver on this hypothetical, wacky route would have to be going _very_ fast."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "Although GPS can often have very poor positional accuracy, its temporal measurements are rarely off by more than a [nanosecond](http://www.atomic-clock.galleon.eu.com/support/gps-time-accuracy.html). Because of this temporal precision, we can assert that any candidate route matched between two GPS data points must traverse its path in exactly the amount of time elapsed between the measurements. What this means is that a truly wacky match -- one that takes detours down side streets or doubles back on itself -- is going to have a lot of additional ground to cover in the same amount of time. In other words, the driver on this hypothetical, wacky route would have to be going _very_ fast.\n",
+    "\n",
     "The match error diagram from [Newton and Krumm (2009)](http://research.microsoft.com/en-us/um/people/jckrumm/Publications%202009/map%20matching%20ACM%20GIS%20camera%20ready.pdf) helps illustrate how we might construct a speed-based error metric:"
    ]
   },
@@ -102,16 +94,8 @@
     "editable": true
    },
    "source": [
-    "Imagine that we have two GPS measurements on either end of the route shown above. Clearly, someone driving along the matched route would need to drive nearly twice as fast as someone on the correct route in order to traverse their paths in the same amount of time. Therefore, if we know that the average speed limit along the matched route is 50 km/h, and the speed we derive from our GPS measurements is 100 km/h, we probably have a bad match. Our hypothesis is that because bad matches are more likely to generate unreasonably high speeds relative to the known [speed limits](http://wiki.openstreetmap.org/wiki/Speed_limits) along a route, **we should therefore be able to identify bad matches based on the magnitude of this speed error**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "Imagine that we have two GPS measurements on either end of the route shown above. Clearly, someone driving along the matched route would need to drive nearly twice as fast as someone on the correct route in order to traverse their paths in the same amount of time. Therefore, if we know that the average speed limit along the matched route is 50 km/h, and the speed we derive from our GPS measurements is 100 km/h, we probably have a bad match. Our hypothesis is that because bad matches are more likely to generate unreasonably high speeds relative to the known [speed limits](http://wiki.openstreetmap.org/wiki/Speed_limits) along a route, **we should therefore be able to identify bad matches based on the magnitude of this speed error**.\n",
+    "\n",
     "Below, we attempt to learn from our simulated GPS traces what the optimal threshold for such a speed-based error metric might be."
    ]
   },
@@ -238,7 +222,7 @@
     "editable": true
    },
    "source": [
-    "The previous bits of code should look familiar to you if you've been following these map-matching tutorials from the beginning. The only difference here is that rather than scoring matches, we're interested in score speeds. Thus, we can toss the first object returned by `get_route_metrics()` and store the second, which correspond to the match and speed dataframes, respectively:"
+    "The previous bits of code should look familiar to you if you've been following these map-matching tutorials from the beginning. The only difference here is that rather than scoring matches, we're interested in scoring speeds. Thus, we are only interested in the second object returned by the `get_route_metrics()` function, which correspond to the speed metric dataframe."
    ]
   },
   {
@@ -413,7 +397,7 @@
     "editable": true
    },
    "source": [
-    "The optimal speed threshold is defined by the speed error that maximizes the difference between the True Positive match rate and the False Positive match rate. The graph below shows the CDF's for both of these rates over our set of testing data. Our hypothesis is that **road segments incorrectly matched by the Reporter are more likely to have unreasonably high speeds due to the tendency of misidentified routes to follow detours that are nearly impossible to traverse in the amount of time elapsed during the traversal of the actual route."
+    "The optimal speed threshold is defined by the speed error that maximizes the difference between the True Positive match rate and the False Positive match rate. The graph below shows the CDF's for both of these rates over our set of testing data. The point at which the threshold intersects the matched segments' CDF and the unmatched segments' CDF define the rate of True Positives and False Positives, respectively:"
    ]
   },
   {
