changes before blog post

--- a/notebooks/map_matching_part_II.ipynb
+++ b/notebooks/map_matching_part_II.ipynb
@@ -44,9 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -292,7 +292,7 @@
     "editable": true
    },
    "source": [
-    "Because this grid search takes place in such high dimensional space - $\\text{noise levels} \\times \\text{sample rates} \\times \\beta \\ \\text{values} \\times \\sigma\\  \\text{values} \\times \\text{# routes}$ - it is recommended to use a smaller number of discrete noise levels for this section of the analysis (< 10)."
+    "Because this grid search takes place in such high dimensional space - $\\text{noise levels} \\times \\text{sample rates} \\times \\beta \\ \\text{values} \\times \\sigma\\  \\text{values} \\times \\text{# routes}$ - we use a smaller number of discrete noise levels for this section of the analysis:"
    ]
   },
   {
@@ -578,6 +578,9 @@
     "In our case there does appear to be a \"global\" trend of decreasing error toward the upper right quadrants of our plots, which correspond to higher $\\sigma_z$'s and lower $\\beta$'s. If we wanted to optimize our parameters across all sample rates and noise levels at once, the results suggest that our optimal parameters would lie at the maximum $\\sigma_z$ and minimum $\\beta$ values of our search space. This is an interesting finding, and not entirely satistfying, since it is typically unwise to pick parameter values at the limits of your search space -- who knows what may lie on the other side? Although this could be evidence that we didn't cast a wide enough net in our parameter sweep, there is reason to believe that it might not be worthwhile to search any further:\n",
     "\n",
     "1. Focusing specifically at the plots in the 0 - 40 m range of noise, it's pretty clear that expanding the range of feasible parameter values wouldn't do any good. **You can't get much better than 0 error, and our plots in this range are already dominated by dark green**. We can obtain optimal results by picking parameters anywhere in this dark green zone.\n",
+    "<div style=\"margin: 0 auto; width:100%;\">\n",
+    "<img src=\"https://s3.amazonaws.com/mapzen-assets/images/data-driven-map-matching/noise_vs_sample_rate.gif\">\n",
+    "</div>\n",
     "2. We expect most of our data to be within this bottom half of the range of noise levels we tested. According to the [Institute of Navigation](https://www.ion.org/publications/abstract.cfm?articleID=13079), GPS-enabled smartphones can typically achieve an accuracy of ~5 m. Even taking into consideration the fact that most of our Open Traffic partners will be operating in dense urban environments where GPS is notoriously inaccurate, we still expect to be operating primarily in the realm sub-60 m of noise. **It is likely not to our advantage to tune our algorithm parameters to optimize for the worst-case scenario**.\n",
     "3. In the range of noiser data (> 60 m), although there is very _little_ dark green in the plots, there is also no evidence to suggest that we should expect to do any better by increasing our search space. In fact, our inuition about the limitations of map-matching with extremely noisy GPS data tells us that the opposite is probably true. **There is only so much we can expect the algorithm to do with data once its positional accuracy is less than the length of a standard city block.**\n",
     "4. Performing a grid search over this many different parameters is extremely **slow**.\n",
@@ -810,7 +813,7 @@
    },
    "outputs": [],
    "source": [
-    "newRoutes = val.get_POI_routes_by_length(cityName, 1, 5, 100, gmapsKey)"
+    "newRoutes = val.get_POI_routes_by_length(cityName, minRouteLength=1, maxRouteLength=5, numResults=100, apiKey=gmapsKey)"
    ]
   },
   {
